Korjaukset PN juttuun

--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -64,6 +64,46 @@ year = {2007},
 note = {Degree dissertation},
 }
 
+@BOOK{will:tegp,
+   author = {{Will}, C.~M.},
+    title = "{Theory and Experiment in Gravitational Physics}",
+     year = 1993,
+    month = mar,
+    pages = {396},
+  address = {Cambridge},
+publisher = {Cambridge University Press},
+   adsurl = {http://adsabs.harvard.edu/abs/1993tegp.book.....W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{peters:1964,
+  title = "{Gravitational Radiation and the Motion of Two Point Masses}",
+  author = {{Peters}, P.~C.},
+  journal = {Phys. Rev.},
+  volume = {136},
+  issue = {4B},
+  numpages = {0},
+  year = {1964},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.136.B1224},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.136.B1224}
+}
+
+@article{peters-mathews:1963,
+  title = "{Gravitational Radiation from Point Masses in a Keplerian Orbit}",
+  author = {{Peters}, P.~C. and {Mathews}, J.},
+  journal = {Phys. Rev.},
+  volume = {131},
+  issue = {1},
+  numpages = {0},
+  year = {1963},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.131.435},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.131.435}
+}
+
 @article{will:2014,
   title = "{Incorporating post-Newtonian effects in N-body dynamics}",
   author = {{Will}, C.~M.},
@@ -152,8 +192,6 @@ archivePrefix = "arXiv",
      year = 2018,
     month = jul,
    volume = 615,
-      eid = {L15},
-    pages = {L15},
 }
 
 @ARTICLE{haring:2004,
@@ -165,7 +203,6 @@ archivePrefix = "arXiv",
      year = 2004,
     month = apr,
    volume = 604,
-    pages = {L89-L92},
       doi = {10.1086/383567},
    adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...604L..89H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -180,7 +217,6 @@ archivePrefix = "arXiv",
      year = 2000,
     month = aug,
    volume = 539,
-    pages = {L9-L12},
       doi = {10.1086/312838},
    adsurl = {http://adsabs.harvard.edu/abs/2000ApJ...539L...9F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -211,7 +247,6 @@ archivePrefix = "arXiv",
         month = Feb,
        volume = {728},
           eid = {95},
-        pages = {95},
           doi = {10.1088/0004-637X/728/2/95},
 archivePrefix = {arXiv},
        eprint = {1009.5427},
@@ -269,7 +304,6 @@ archivePrefix = {arXiv},
          year = 2003,
         month = May,
        volume = {589},
-        pages = {L21-L24},
           doi = {10.1086/375804},
 archivePrefix = {arXiv},
        eprint = {astro-ph/0304274},
@@ -325,7 +359,6 @@ archivePrefix = "arXiv",
      year = 1964,
     month = jul,
    volume = 140,
-    pages = {1},
       doi = {10.1086/147889},
    adsurl = {http://adsabs.harvard.edu/abs/1964ApJ...140....1G},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -354,7 +387,6 @@ archivePrefix = "arXiv",
         month = Jan,
        volume = {26},
           eid = {1730021},
-        pages = {1730021},
           doi = {10.1142/S021827181730021X},
  primaryClass = {astro-ph.GA},
        adsurl = {https://ui.adsabs.harvard.edu/#abs/2017IJMPD..2630021M},
@@ -369,7 +401,6 @@ archivePrefix = "arXiv",
          year = 2017,
         month = Jun,
           eid = {51},
-        pages = {51},
  primaryClass = {astro-ph.GA},
        adsurl = {https://ui.adsabs.harvard.edu/#abs/2017mbhe.confE..51K},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -453,7 +484,6 @@ booktitle = {Astrophysics of Black Holes: From Fundamental Aspects to Latest Dev
 archivePrefix = "arXiv",
    eprint = {1507.06153},
 primaryClass = "astro-ph.HE",
-    pages = {99},
       doi = {10.1007/978-3-662-52859-4_3},
    adsurl = {http://adsabs.harvard.edu/abs/2016ASSL..440...99M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
