Dynaamisesta kitkasta asiaa

--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,18 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{chandrasekhar:1943,
+   author = {{Chandrasekhar}, S.},
+    title = "{Dynamical Friction. I. General Considerations: the Coefficient of Dynamical Friction.}",
+  journal = {ApJ},
+     year = 1943,
+    month = mar,
+   volume = 97,
+      doi = {10.1086/144517},
+   adsurl = {http://adsabs.harvard.edu/abs/1943ApJ....97..255C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{peters:1964,
   title = "{Gravitational Radiation and the Motion of Two Point Masses}",
   author = {{Peters}, P.~C.},
