--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -739,18 +739,57 @@ This was the first case of solving the general relativistic two-body problem, wh
 
 There are some systems that cannot be properly described by post-Newtonian approximation because of their extreme conditions. Some examples of such systems include the final phases of a compact object merger, the cores of supernovae, and the structure of rapidly rotating neutron stars. These must be analysed using different methods, for example the full solution of Einstein's equations via numerical methods \citep{will:2006}. 
 
-\section{Black holes in galaxy mergers}
+\section{Black hole mergers}
+
+(To do: motivaatiota, miksi on kiinostavaa, galaksien törmätessä saadaan aikaa SMBH binäärejä, kolme vaihetta)
 
 %TODO kpl 8 Binney ja tremaine, kpl 12 H. Mo
 %open problems tehtävät kotoo
 
-\section{Black hole mergers}
 \subsection{Dynamical friction}
 
-%TODO chandrasekharin kaava
+When for example galaxies merge, the interactions between their components cause the stars to transfer momentum and kinetic energy from their relative orbital motion to random motion. This leads to their orbital decay and the matter sinking into the system. This process, known as dynamical friction, applies to large clusters of particles or even single massive particle, like a black hole, moving through a larger host system \citep{bt-galdyn}.
+
+An intuitive way of understanding the process is to think of a body of mass $M$ travelling through a population of particles of mass $m_a \ll M$. We call the mass $M$ the subject body and the smaller particles of mass $m_a$ field stars. We assume that the field stars are members of a large host with a total mass much greater than $M$, so that it can be approximated as near infite and homogeneous. Thus when the subject body moves through the sea of field particles, it attracts the smaller particles through gravity, and leaves behind a so called gravitational wake. This higher concentration of mass behind the particle compared to in front of it causes a drag force that slows down the subject body. (To do: tähän kuva lisäksi)
+
+\cite{chandrasekhar:1943} derived a formula for the force caused on the subject body by this effect. This force is expressed as
+\begin{equation}
+\mathbf{F}_{\mathrm{df}} = M \frac{\mathrm{d} \mathbf{v}_M}{\mathrm{d} t} = -16 \pi^2 G^2 M^2 m_a \mathrm{ln} \Lambda \left[ \int_0^{v_M} f(v_m) v_m^2 \mathrm{d}v_m \right] \frac{\mathbf{v}_M}{v_M^3} \label{equ:dynamicalfriction}
+\end{equation}
+and it is called Chandrasekhar's dynamical friction formula. Here $f(v_m)$ is the distribution function of the field particles. This formula assumes that the field stars have an isotropic velocity distribution, and thus only field stars moving slower than the mass $M$ contribute to the friction. This force always opposes the motion of the subject body, similarly to ordinary frictional drag.
+
+The logarithm $\mathrm{ln} \Lambda$ is known as the Coulomb logarithm, and if we approximate that the particles are point masses, it is defined as
+\begin{equation}
+\mathrm{ln} \Lambda \approx \mathrm{ln} \left( \frac{b_{\mathrm{max}}}{b_{90}} \right) \ .
+\end{equation}
+Here $b$ means the impact parameter of a two-body encounter, which is the shortest distance between the two particles, if they passed each other without any interaction. Parameter $b_{max}$ is the maximum impact parameter considered, and $b_{90}$ is the impact parameter at which the direction of the orbit of the passing particle will be altered by $90^{\circ}$. This latter parameter can be expressed as
+\begin{equation}
+b_{90} = \frac{G(M+m_a)}{v^2_{\mathrm{typ}}} \ ,
+\end{equation}
+where $v_{\mathrm{typ}}$ is the typical encounter speed between the particles. This gives Coulomb's logarithm the form of
+\begin{equation}
+\mathrm{ln} \Lambda \approx \mathrm{ln} \left( \frac{b_{\mathrm{max}} v^2_{\mathrm{typ}}}{G(M+m_a)} \right) \ .
+\end{equation}
+This logarithm basically describes the cut-off of the friction effect at the maximum impact parameter \citep{galform}.
+
+If the subject mass moves slowly, so we can assume that $v_M$ is small, the field star distribution function can be approximately replaced with $f(0)$, in which case the integral is easy to evaluate, so we get the following form for equation \ref{equ:dynamicalfriction}: 
+\begin{equation}
+\mathbf{F}_{\mathrm{df}} = -\frac{16 \pi^2}{3} G^2 M^2 m_a \, \mathrm{ln} \Lambda \, f(0) \mathbf{v}_M \ . \label{equ:dynfricslow}
+\end{equation}
+On the other hand if the subject body moves at a sufficiently large speed, the integral in equation \ref{equ:dynamicalfriction} converges to a definite limit, equal to the number density of the field stars divided by $4\pi$ \citep{bt-galdyn}, so we get
+\begin{equation}
+\mathbf{F}_{\mathrm{df}} = -4 \pi G^2 M^2 m_a n \, \mathrm{ln} \Lambda \, \frac{\mathbf{v}_M}{v_M^3} \ . \label{equ:dynfricfast}
+\end{equation}
+Here the mass density $m_a n$ can be replaced with $\rho(< v_M)$, the overall density of the field particles moving slower than the subject body.
+
+From equations \ref{equ:dynfricslow} and \ref{equ:dynfricfast} we can see that unlike with hydrodynamic friction, where the drag always increases as the velocity increases, the situation is more complicated. At sufficiently slow speeds dynamical friction is relative to the speed of the subject body, $F_{\mathrm{df}} \propto v_M$. But at larger speeds the frictional force begins to fall, $F_{\mathrm{df}} \propto v_M^{-2}$. And as the mass density of the field stars can be replaced with the overall density, the force is independent of the individual masses of the field particles, so the formula is also valid for a field with distributed particle masses.
 
 \subsection{Three body scattering}
+
+
 \subsection{Gravitational waves}
+
+
 
 \chapter{AR-CHAIN} \label{chap:ar-chain}
 \section{AR-CHAIN overview}
